plugins {
	id 'org.springframework.boot' version '2.1.5.RELEASE'
	id "com.github.node-gradle.node" version "1.4.0"
	id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation group: 'com.opencsv', name: 'opencsv', version: '4.6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

node {
	version = "10.15.3"
	download = true
}

task webpack(type: NpmTask, dependsOn: 'npmInstall') {
	args = ['run', 'build']
}

bootRun.dependsOn webpack